SERVER-68808 Fix removal of ErrorCode::Interruption from Repl