src/mongo/db/ops/write_ops_exec.cpp
@@ -194,7 +194,7 @@ public:
             // here. No-op updates will not generate a new lastOp, so we still need the
             // guard to fire in that case. Operations on the local DB aren't replicated, so they
             // don't need to bump the lastOp.
-            replClientInfo().setLastOpToSystemLastOpTimeIgnoringCtxCancelled(_opCtx);
+            replClientInfo().setLastOpToSystemLastOpTimeIgnoringShutdownCtxCancelled(_opCtx);
             LOGV2_DEBUG(20888,
                         5,
                         "Set last op to system time: {timestamp}",
